# llama.cpp

./: .gitignore  Makefile  convert-gpt2-hf-to-gguf.py  convert-gptj-hf-to-gguf.py  convert-gptneox-hf-to-gguf.py  convert-llama-hf-to-gguf_for_calm2.py  convert-llama-hf-to-gguf_for_ex_vocab.py  convert-llama-hf-to-gguf_for_stockmark13b.py  convert-llmjp-to-gguf.py  convert-plamo-hf-to-gguf.py  convert-plamo.py  convert-stablelm-beta-vocab.py  convert-stablelm-hf-to-gguf.py  ggml-metal.m  ggml-metal.metal  llama.cpp
.github/workflows/: build.yml  docker.yml
examples/: CMakeLists.txt
examples/gptneox-wip/: CMakeLists.txt  falcon-main.cpp  gpt2-main.cpp  gptj-main.cpp  gptneox-main.cpp  spm_tokenizer.hpp
gguf-py/gguf/: gguf.py
